--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyARUQTv6gyaKEfJwEo0MIzHQws2ARN54og
-VITE_FIREBASE_AUTH_DOMAIN=moviere-11191.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=moviere-11191
-VITE_FIREBASE_STORAGE_BUCKET=moviere-11191.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=358656495420
-VITE_FIREBASE_APP_ID=1:358656495420:web:a14d2a8d178db1ffe65839
-VITE_FIREBASE_MEASUREMENT_ID=G-NKG96WDYQQ
+VITE_FIREBASE_API_KEY=Your Details
+VITE_FIREBASE_AUTH_DOMAIN=Your Details
+VITE_FIREBASE_PROJECT_ID=Your Details
+VITE_FIREBASE_STORAGE_BUCKET=Your Details
+VITE_FIREBASE_MESSAGING_SENDER_ID=Your Details
+VITE_FIREBASE_APP_ID=Your Details
+VITE_FIREBASE_MEASUREMENT_ID=Your Details
